k8s/database.pod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pointservice-db
spec:
  serviceName: "pointservice-db-h"
  replicas: 1
  selector:
    matchLabels:
      app: pointservice-db
  template:
    metadata:
      labels:
        app: pointservice-db
    spec:
      containers:
        - name: pointservice-db
          image: postgres:alpine
          volumeMounts:
            - name: postgres-storage-pv-ps      # Must match the name in 'volumes'
              mountPath: /var/lib/postgresql/18/docker # The internal Postgres path
          ports:
            - containerPort: 5432
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage-pv-ps
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
