k8s/database.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pointservice-db-h # The "h" stands for headless
spec:
  clusterIP: None        # THIS IS THE SECRET SAUCE
  selector:
    app: pointservice-db  # Must match the DB pods
  ports:
    - port: 5432
